--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,5 +1,5 @@
 @charset "UTF-8";
 body {
-    background-color: #424242;
-    color: #FFFFFF;
+    background-color: #191b1c;
+    color: #ffffff;
 }
