Change background color
・背景色を若干暗く変更

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,5 +1,5 @@
 @charset "UTF-8";
 body {
-    background-color: #191b1c;
-    color: #ffffff;
+    background-color: #0A0A0A;
+    color: #FFFFFF;
 }
