--- a/src/css/style.css
+++ b/src/css/style.css
@@ -4,4 +4,32 @@
 }
 body {
     background-color: #0A0A0A;
+    margin: 0;
+    font-family: "Hiragino Kaku Gothic ProN", "Hiragino Sans", "Meiryo", sans-serif;
+}
+#container {
+    width: 920px;
+    margin: 0 auto;
+    background-color: #333333;
+}
+#header {
+    width: 920px;
+    margin: 0 auto;
+}
+#header h1 {
+    margin: 0;
+}
+#nav ul {
+    padding: 0 1px;
+    display: flex;
+    list-style-type: none;
+    text-align: center;
+    margin: 4px 0 10px 0;
+}
+#nav li {
+    flex: 1;
+    border-style: solid;
+    border-color: #0A0A0A;
+    font-weight: bold;
+    padding: 4px;
 }
