--- a/src/css/style.css
+++ b/src/css/style.css
@@ -29,7 +29,7 @@ body {
 #nav li {
     flex: 1;
     border-style: solid;
-    border-color: #333333;
+    border-color: #8F8F8F;
     font-weight: bold;
     padding: 4px;
 }
