Fix image and navigation's position
・ヘッダ画像とリンクの位置にずれが生じていたのを修正
・グローバルナビゲーションの枠の色と位置を修正

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -29,7 +29,10 @@ body {
 #nav li {
     flex: 1;
     border-style: solid;
-    border-color: #808080;
+    border-color: #0A0A0A;
     font-weight: bold;
     padding: 4px;
+}
+img {
+    vertical-align: bottom;
 }
