--- a/src/css/style.css
+++ b/src/css/style.css
@@ -3,14 +3,14 @@
     color: #FFFFFF;
 }
 body {
-    background-color: #0A0A0A;
+    background-color: #000000;
     margin: 0;
     font-family: "Hiragino Kaku Gothic ProN", "Hiragino Sans", "Meiryo", sans-serif;
 }
 #container {
     width: 920px;
     margin: 0 auto;
-    background-color: #212121;
+    background-color: #4A4A4A;
 }
 #header {
     width: 900px;
@@ -29,9 +29,10 @@ body {
 #nav li {
     flex: 1;
     border-style: solid;
-    border-color: #0A0A0A;
+    border-color: #000000;
     font-weight: bold;
     padding: 4px;
+    margin: 0 2px;
 }
 img {
     vertical-align: bottom;
