[change] containerの背景色を変更
・containerの背景色が明るすぎて違和感があったため若干暗くした．

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -10,7 +10,7 @@ body {
 #container {
     width: 920px;
     margin: 0 auto;
-    background-color: #4A4A4A;
+    background-color: #333333;
 }
 #header {
     width: 900px;
