--- a/src/css/style.css
+++ b/src/css/style.css
@@ -17,7 +17,8 @@ body {
     margin: 0 auto;
 }
 #header h1 {
-    margin: 0;
+    margin: 0 auto;
+    width: 894px;
 }
 #nav ul {
     padding: 0 1px;
