[change]サイトマップの下位にネストされている要素の左側を調整
・左側のスペースが広すぎて今後見づらくなりそうだったため1文字分に縮小した．
・list-styleをnoneに変更した．

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -89,8 +89,13 @@ a {
     padding: 6px;
     background-color: #242424;
 }
+#sitemap ul {
+	list-style: none;
+}
 .sitemap-root {
     margin: 12px;
     padding: 0;
-    list-style: none;
+}
+.sitemap-node {
+    margin: 0 0 0 1em;
 }
