[add]フッタにCC表示を追加
・フッタにCC BY-ND 4.0 の表記を追加した．

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -122,3 +122,12 @@ a {
 .sitemap-node {
     padding-left: 1em;
 }
+
+#footer {
+    border-top: #555555;
+    padding-bottom: 10px;
+}
+
+#footer p {
+    text-align: center;
+}
