[change]aタグのブロックレベル要素化をheaderタグ内のみに変更
・aタグ全てをブロックレベル要素にすると，ヘッダ以外でaタグを使う時にリンクの当たり判定がクソデカになるので修正した．

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -14,10 +14,6 @@ img {
     vertical-align: bottom;
 }
 
-a {
-    display: block;
-}
-
 #container {
     width: 920px;
     margin: 0 auto;
@@ -32,6 +28,10 @@ a {
 #header h1 {
     margin: 0 auto;
     width: 894px;
+}
+
+#heasder a {
+    display: block;
 }
 
 #nav ul {
