[change]ccライセンス表示の画像にかかるaタグの位置を調整
・リンクの当たり判定が若干大きくなる問題に対応しておくためにaタグをブロックレベル要素化した．
・imgタグに画像の大きさを定義することで正常にリンクの当たり判定が設定されるようにした．

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -131,11 +131,6 @@ img {
     margin: 15px;
 }
 
-#cc img {
-    width: 88px;
-    height: 31px;
-}
-
 #cc p {
     text-align: center;
     margin: 10px auto 0;
@@ -146,6 +141,11 @@ img {
     width: 88px;
 }
 
-#cc a {
+#ccimg a {
     display: block;
+}
+
+#ccimg img {
+    width: 88px;
+    height: 31px;
 }
