[add]右側サイドバーに新着情報表示欄を追加
・総合的な新着情報表示欄をiframeで実装する予定．

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -72,6 +72,12 @@ img {
     order: 3;
 }
 
+.whatsnew h4 {
+    margin: 0;
+    padding: 6px;
+    background-color: #242424;
+}
+
 .welcome {
     margin: 0 0 10px 0;
     border: solid 2px #000000;
