[change]グローバルナビゲーションのmargin値見直し(→mainと端を揃えた)
・2pxのｷｯｼｮｲずれを直した．

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -48,7 +48,18 @@ img {
     border-color: #000000;
     font-weight: bold;
     padding: 4px;
+}
+
+.navl {
+    margin: 0 2px 0 0;
+}
+
+.navc {
     margin: 0 2px;
+}
+
+.navr {
+    margin: 0 0 0 2px;
 }
 
 #main {
