--- a/src/css/style.css
+++ b/src/css/style.css
@@ -100,6 +100,11 @@ img {
     text-indent: 1em;
 }
 
+.welcome iframe {
+    width: 730px;
+    height: 400px;
+}
+
 .maincontents {
     margin-bottom: 10px;
     border: solid 2px #000000;
