--- a/src/css/style.css
+++ b/src/css/style.css
@@ -101,8 +101,9 @@ img {
 }
 
 .welcome iframe {
-    width: 721px;
+    width: 722px;
     height: 250px;
+    border: 2px solid #555555;
 }
 
 .maincontents {
