iframeをブロック要素化
・インライン要素の余白は帰れ

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -101,8 +101,9 @@ img {
 }
 
 .welcome iframe {
+    display: block;
     width: 722px;
-    height: 250px;
+    height: 200px;
     border: 2px solid #555555;
 }
 
