--- a/src/css/style.css
+++ b/src/css/style.css
@@ -168,8 +168,11 @@ img {
 }
 
 table {
-    border: 1px solid #555555;
     border-collapse: collapse;
+}
+
+td {
+    border: 1px solid #555555;
 }
 
 .table-links {
